--- a/thamil-cli-project/package.json
+++ b/thamil-cli-project/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.17.1",
     "node-fetch": "^2.7.0"
   }
